<resources>
    <string name="app_name">Recuperacao-3BI-Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imc">IMC</string>
    <string name="vct">VCT</string>
    <string name="pa">Perfil Antropométrico</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="nivel_esporte">Nível Esporte</string>
    <string name="nascimento">Data de nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="enviar">Enviar</string>
    <string name="lbl_pa_title">Perfil Antropométrico</string>
    <string name="vct_title">Cálculo VCT</string>
    <string name="carregando">Carregando...</string>
</resources>
