<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="50px"
    android:layout_marginRight="10px"
    android:layout_marginLeft="10px"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:nestedScrollingEnabled="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vct_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="50px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewPeso"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso" />

                <EditText
                    android:id="@+id/edt_vct_peso"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewAltura"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura" />

                <EditText
                    android:id="@+id/edt_vct_altura"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewNivelEsporte"
                    android:layout_width="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_height="wrap_content"
                    android:text="@string/nivel_esporte" />

                <EditText
                    android:id="@+id/edt_vct_esporte"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sexo"
                    android:id="@+id/textView3" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spn_vct_sexo"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewNascimento"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nascimento" />

        <EditText
            android:id="@+id/edt_vct_data_nascimento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:id="@+id/btn_vct_enviar"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>
